@@ -1003,6 +1003,26 @@ BEGIN
     PUSHBUTTON      "&Help",IDHELP,209,183,50,14
 END
 
+IDD_SETTINGSCOLORS DIALOGEX 0, 0, 300, 217
+STYLE DS_SETFONT | DS_FIXEDSYS | WS_CHILD | WS_DISABLED | WS_CAPTION
+CAPTION "Look and Feel::Colors"
+FONT 8, "MS Shell Dlg", 0, 0, 0x0
+BEGIN
+    GROUPBOX        "Status and action colors",IDC_STATIC,7,7,286,120
+    LTEXT           "possible or real conflict / obstructed",IDC_STATIC,13,
+                    23,137,8
+    LTEXT           "added files",IDC_STATIC,13,44,135,8
+    LTEXT           "missing / deleted / replaced",IDC_STATIC,13,66,137,8
+    LTEXT           "merged",IDC_STATIC,13,87,137,8
+    LTEXT           "modified / copied",IDC_STATIC,13,107,137,8
+    PUSHBUTTON      "",IDC_CONFLICTCOLOR,158,20,50,14
+    PUSHBUTTON      "",IDC_ADDEDCOLOR,158,41,50,14
+    PUSHBUTTON      "",IDC_DELETEDCOLOR,158,62,50,14
+    PUSHBUTTON      "",IDC_MERGEDCOLOR,158,83,50,14
+    PUSHBUTTON      "",IDC_MODIFIEDCOLOR,158,104,50,14
+    PUSHBUTTON      "Restore Default",IDC_RESTORE,200,196,93,14
+END
+
 
 /////////////////////////////////////////////////////////////////////////////
 //
@@ -1436,6 +1456,17 @@ BEGIN
         RIGHTMARGIN, 259
         TOPMARGIN, 7
         BOTTOMMARGIN, 197
+    END
+
+    IDD_SETTINGSCOLORS, DIALOG
+    BEGIN
+        LEFTMARGIN, 7
+        RIGHTMARGIN, 293
+        VERTGUIDE, 13
+        VERTGUIDE, 150
+        VERTGUIDE, 158
+        TOPMARGIN, 7
+        BOTTOMMARGIN, 210
     END
 END
 #endif    // APSTUDIO_INVOKED
